<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.spectraapps.myspare.navdrawer.UpdatePassword"
    android:background="@drawable/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_pass_text"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/reg_nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_24dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/send"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
