<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="com.spectraapps.myspare.login.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/app_logo"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/reg_nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_white_36dp"
                    android:hint="@string/name"
                    android:drawablePadding="15dp"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/reg_phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/ic_phone_white_36dp"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_emailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <AutoCompleteTextView
                    android:id="@+id/reg_emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_white_36"
                    android:hint="@string/prompt_email"
                    android:drawablePadding="15dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_passTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/reg_passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/ic_lock_white_36"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/action_sign_up"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>